force-app/main/default/objects/MHUB_Master_Campaign__c/MHUB_Master_Campaign__c.object-meta.xml
<CustomObject>
    <description>MHUB - contains the master planning and strategy and any secondary planning and strategy campaigns.</description>
    <label>Master Campaign</label>
    <nameField>
        <label>Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Campaigns</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>