force-app/main/default/objects/MHUB_Master_Campaign__c/fields/MHUB_Campaign_Duration__c.field-meta.xml
<CustomField>
    <fullName>MHUB_Campaign_Duration__c</fullName>
    <description>MHUB - This gives the Campaign Duration in Months.</description>
    <formula>(MHUB_Flight_End_Date__c -  MHUB_Flight_Start_Date__c)/30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Duration</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>