force-app/main/default/objects/MHUB_Master_Campaign__c/fields/MHUB_Demographic__c.field-meta.xml
<CustomField>
    <fullName>MHUB_Demographic__c</fullName>
    <description>MHUB - Demographic for master planning and strategy and any secondary planning and strategy campaigns.</description>
    <label>Demographic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Household</fullName>
            </value>
            <value>
                <fullName>Person 18-34</fullName>
            </value>
            <value>
                <fullName>Person 18-49</fullName>
            </value>
            <value>
                <fullName>Men 18-34</fullName>
            </value>
            <value>
                <fullName>Men 18-49</fullName>
            </value>
            <value>
                <fullName>Person 25-54</fullName>
            </value>
            <value>
                <fullName>Person 2+</fullName>
            </value>
            <value>
                <fullName>Men 25-54</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>