force-app/main/default/objects/MHUB_Master_Campaign__c/fields/MHUB_Flight_End_Date__c.field-meta.xml
<CustomField>
    <fullName>MHUB_Flight_End_Date__c</fullName>
    <description>MHUB - It indicates that Master Campaign Flight End Date.</description>
    <label>Flight End Date</label>
    <type>Date</type>
</CustomField>