force-app/main/default/objects/MHUB_Master_Campaign__c/fields/MHUB_Flight_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>MHUB_Flight_Start_Date__c</fullName>
    <description>MHUB - It indicates that  Master Campaign Flight Start Date.</description>
    <label>Flight Start Date</label>
    <type>Date</type>
</CustomField>