force-app/main/default/objects/MHUB_Master_Campaign__c/fields/MHUB_Image_Url__c.field-meta.xml
<CustomField>
    <fullName>MHUB_Image_Url__c</fullName>
    <label>Image Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>