force-app/main/default/objects/MHUB_Master_Campaign__c/fields/MHUB_Length__c.field-meta.xml
<CustomField>
    <fullName>MHUB_Length__c</fullName>
    <description>MHUB - Length of each master planning and strategy and any secondary planning and strategy campaigns.</description>
    <label>Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default Lengths</fullName>
            </value>
            <value>
                <fullName>:03</fullName>
            </value>
            <value>
                <fullName>:05</fullName>
            </value>
            <value>
                <fullName>:10</fullName>
            </value>
            <value>
                <fullName>:15</fullName>
            </value>
            <value>
                <fullName>:20</fullName>
            </value>
            <value>
                <fullName>:25</fullName>
            </value>
            <value>
                <fullName>:30</fullName>
            </value>
            <value>
                <fullName>:35</fullName>
            </value>
            <value>
                <fullName>:60</fullName>
            </value>
            <value>
                <fullName>:45</fullName>
            </value>
            <value>
                <fullName>:40</fullName>
            </value>
            <value>
                <fullName>:50</fullName>
            </value>
            <value>
                <fullName>:90</fullName>
            </value>
            <value>
                <fullName>:02</fullName>
            </value>
            <value>
                <fullName>:120</fullName>
            </value>
            <value>
                <fullName>:75</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>