force-app/main/default/objects/MHUB_Master_Campaign__c/fields/MHUB_Master_Campaign__c.field-meta.xml
<CustomField>
    <fullName>MHUB_Master_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MHUB - This shows Master Planning Campaigns on Secondary Planning Campaigns.</description>
    <label>Master Campaign</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <errorMessage>You are not allowed to select Secondary Campaigns. Please select only Master Campaigns.</errorMessage>
        <filterItems>
            <field>MHUB_Master_Campaign__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>MHUB_Master_Campaign</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MHUB_Master_Campaign__c</referenceTo>
    <relationshipLabel>Secondary Planning Campaigns</relationshipLabel>
    <relationshipName>Master_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>