force-app/main/default/objects/MHUB_Master_Campaign__c/fields/MHUB_Season__c.field-meta.xml
<CustomField>
    <fullName>MHUB_Season__c</fullName>
    <description>MHUB - Season of master planning and strategy and any secondary planning and strategy campaigns.</description>
    <label>Season</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2022</fullName>
                <default>true</default>
                <label>2022</label>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2026</fullName>
            </value>
            <value>
                <fullName>2027</fullName>
            </value>
            <value>
                <fullName>2028</fullName>
            </value>
            <value>
                <fullName>2029</fullName>
            </value>
            <value>
                <fullName>2030</fullName>
            </value>
            <value>
                <fullName>2031</fullName>
            </value>
            <value>
                <fullName>2032</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>