force-app/main/default/objects/MHUB_Master_Campaign__c/fields/MHUB_Sport__c.field-meta.xml
<CustomField>
    <fullName>MHUB_Sport__c</fullName>
    <description>MHUB - This shows that Sport of Master Campaigns.</description>
    <label>Sport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MLB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>