force-app/main/default/objects/MHUB_Master_Campaign__c/fields/MHUB_Sport_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>MHUB_Sport_Sub_Category__c</fullName>
    <description>MHUB - This shows that Sport Sub-Category of Master Campaigns.</description>
    <label>Sport Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MLB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>