force-app/main/default/objects/MHUB_Master_Campaign__c/fields/MHUB_Status__c.field-meta.xml
<CustomField>
    <fullName>MHUB_Status__c</fullName>
    <description>MHUB - This shows the status of Master Campaigns.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>