force-app/main/default/objects/MHUB_Master_Campaign__c/recordTypes/MHUB_Master_Campaign.recordType-meta.xml
<RecordType>
    <fullName>MHUB_Master_Campaign</fullName>
    <active>true</active>
    <description>Used for primary campaign for Property/Sport and Season Year</description>
    <label>Master Campaign</label>
</RecordType>