force-app/main/default/objects/MHUB_Master_Campaign__c/recordTypes/MHUB_Secondary_Campaign.recordType-meta.xml
<RecordType>
    <fullName>MHUB_Secondary_Campaign</fullName>
    <active>true</active>
    <description>Used for secondary campaign for special events and post season for Property/Sport</description>
    <label>Secondary Campaign</label>
</RecordType>