force-app/main/default/objects/MHUB_Master_Campaign__c/validationRules/MHUB_MasterCampaign_Valiadate_FlightDate.validationRule-meta.xml
<ValidationRule>
    <fullName>MHUB_MasterCampaign_Valiadate_FlightDate</fullName>
    <active>true</active>
    <description>MHUB - Validate that the Flight Start Date cannot occur after the Flight End Date.</description>
    <errorConditionFormula>MHUB_Flight_Start_Date__c &gt;  MHUB_Flight_End_Date__c</errorConditionFormula>
    <errorMessage>Flight Start Date must occur before the Flight End Date.</errorMessage>
</ValidationRule>