force-app/main/default/objects/MHUB_Master_Campaign__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MHUB_Image_Url__c</columns>
    <columns>MHUB_Season__c</columns>
    <columns>MHUB_Sport__c</columns>
    <columns>MHUB_Sport_Sub_Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>MHUB_Master_Campaign__c.MHUB_Master_Campaign,MHUB_Master_Campaign__c.MHUB_Secondary_Campaign</value>
    </filters>
    <label>All</label>
</ListView>